<resources>
    <string name="cj_app_img_name">conjurer</string>
    <string name="cj_app_preview_on">开启预览</string>
    <string name="cj_app_preview_off">关闭预览</string>
    <string name="cj_app_focus">长按聚焦</string>
    <string name="cj_app_ocr_decoding">正在进行识别</string>
    <string name="cj_app_ocr_decode_fail">识别失败，请调整识别框包裹文字</string>
    <string name="cj_app_ocr_content_fail">未识别到指定信息</string>
    <string name="cj_app_ocr_release">正在关闭识别器，请稍后</string>
    <string name="cj_app_confirm">确定</string>
    <string name="cj_app_cancel">取消</string>
</resources>